Fix CSS formatting issues and enhance responsiveness for the Our Story section. Adjust button classes in the home page layout for better alignment.

--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -493,7 +493,7 @@ img {
 }
 
 #Footer .footer-others-div .official-info ul li a {
-    color: #D7E4F9 ;
+    color: #D7E4F9;
 }
 
 @media (max-width: 575.98px) {
@@ -770,12 +770,15 @@ img {
     .exam-package-area .package-exam-content .package-exam-rating i {
         font-size: 6px;
     }
+
     .exam-package-area .package-exam-content .button-and-price .package-exam-details a {
         font-size: 8px;
     }
+
     .exam-package-area .package-exam-content .button-and-price .package-exam-discount-price {
         font-size: 12px;
     }
+
     .btn-12 span {
         width: 70px;
         font-size: 8px;
@@ -2236,6 +2239,27 @@ img {
 #Our_story .our-story-video-content-area .our-story-content-area p {
     font-size: 14px;
     text-align: justify;
+    max-height: 290px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    padding-right: 15px;
+}
+
+@media (max-width: 1024px) {
+    #Our_story .our-story-video-content-area .our-story-content-area p {
+        max-height: 210px;
+    }
+} 
+
+@media (max-width: 991.98px) {
+    #Our_story .our-story-video-content-area .our-story-content-area p {
+        max-height: 180px;
+    }
+}
+@media (max-width: 768px) {
+    #Our_story .our-story-video-content-area .our-story-content-area p {
+        max-height: 145px;
+    }
 }
 
 @media (max-width: 575.98px) {
@@ -2251,6 +2275,17 @@ img {
         font-size: 16px;
     }
 }
+
+@media (max-width: 320px) {
+    #Our_story .our-story-event-area .event-area-content .event-icon img {
+        height: 60px;
+    }
+
+    #Our_story .our-story-event-area .event-area-content .event-content h3 {
+        font-size: 14px;
+    }
+}
+
 
 /* ----------------- Our Story Section End ---------------------------- */
 
